Fix not center aligned empty cart text

--- a/src/components/pages/cart/Cart.module.sass
+++ b/src/components/pages/cart/Cart.module.sass
@@ -40,3 +40,7 @@
       display: flex
       flex-direction: row
       justify-content: space-between
+
+.center
+  margin: 0 auto
+  text-align: center
